www: Fix overlapping lines II
llvm-svn: 259477

--- a/polly/www/menu.css
+++ b/polly/www/menu.css
@@ -72,7 +72,6 @@
 
 li.rss-item {
   padding-bottom: 0em;
-  height: 1.3em;
 }
 
 .rss_item {
